[package]
name = "smart_scanner"
version = "0.1.0"
authors = ["Michał Burdzy <michal.burdzy@withintent.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.5"
trust-dns-resolver = "0.20"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }